# backster

./: .gitignore  Cargo.toml  README.md  build.rs  check_output.txt  config.example.toml  config.fast.toml  config.normal_noise.toml  config.smoke.toml  config.sp500_adhoc.toml  config.sp500_normal.toml  config.sp500_pipeline.toml
.cargo/: config.toml
scripts/: math1.wls  rolling_p_values.wls
src/: cache.rs  config.rs  main.rs
src/backtest/: engine.rs  mod.rs
src/data/: loader.rs  mod.rs
src/features/: mod.rs  types.rs
src/modes/: backtest.rs  mod.rs  optimize.rs
src/optimizer/: mod.rs
src/report/: ascii.rs  mod.rs  multi_run.rs
src/stats/: ad.rs  ks.rs  mod.rs  rolling_fit.rs
src/strategy/: adhoc_dist.rs  adhoc_normal.rs  mod.rs  normal_noise.rs  p_value.rs  pipeline.rs  rolling_pvalue.rs
src/wolfram/: data.rs  mod.rs  script.rs  wstp.rs
strats/: config.example.toml  config.fast.toml  config.linear_cash.toml  config.linear_leveraged.toml  config.oracle.toml  config.smoke.toml  config.sp500_adhoc.toml  config.sp500_normal.toml
