[package]
name = "backster"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.53.0", features = ["lazy", "csv", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
rand_chacha = "0.3"
statrs = "0.18.0"
