[package]
name = "backster"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.53.0", features = ["lazy", "csv", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
blake3 = "1.8.2"
statrs = "0.18.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
